--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/alexsharich/nJS#readme",
   "dependencies": {
-    "currency-converter-lt": "^1.3.1"
+    "currency-converter-lt": "^1.3.1",
+    "express": "^4.18.1"
   }
 }
