--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/alexsharich/nJS#readme",
   "dependencies": {
     "currency-converter-lt": "^1.3.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
